--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,21 @@
-# Google Gemini API Key
-# Get your API key from https://makersuite.google.com/app/apikey
-GEMINI_API_KEY=your_api_key_here
+# ===========================================
+# API Keys (NEVER commit .env - it's gitignored)
+# Add the keys for whichever providers your configs use
+# ===========================================
+
+# OpenAI - for configs using gpt-4, gpt-3.5-turbo, etc.
+# Get key: https://platform.openai.com/api-keys
+OPENAI_API_KEY=your_openai_key_here
+
+# Google Gemini - for configs using gemini-1.5-flash, etc.
+# Free tier: https://aistudio.google.com/app/apikey
+# Use GEMINI_API_KEY_CH or GEMINI_API_KEY (CH takes precedence)
+GEMINI_API_KEY_CH=your_gemini_key_here
+
+# Manus AI - for configs using manus-1.6, manus-1.6-lite, manus-1.6-max
+# Get key: https://manus.im/app (Integrations → API)
+# Use MANUS_API_KEY_CH or MANUS_API_KEY (CH takes precedence)
+MANUS_API_KEY_CH=your_manus_key_here
 
 # Optional: Set to "real" to call actual APIs, "simulate" for synthetic telemetry
 MODE=simulate
