feat: Add synthetic prompt generator with domain-specific generation
- Add OpenAI-based prompt generator for domain-specific prompts (50-200)
- Add hybrid telemetry estimation (LLM-based + optional real API validation)
- Add CLI tool for prompt generation (npm run generate-prompts)
- Add API routes for frontend integration (/api/generate-prompts, /api/estimate-telemetry)
- Update probe runner to support domain prompt suite format
- Add --prompts flag to probe runner CLI
- Add domain prompt suite schema
- Update documentation and README

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:statistics": "npx tsx tests/statistics.test.ts",
     "probes": "tsx src/cli/run-probes.ts",
     "analyze": "tsx src/cli/run-analysis.ts",
+    "generate-prompts": "tsx src/cli/generate-domain-prompts.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start"
