--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@
 # ===========================================
 
 # OpenAI - for configs using gpt-4, gpt-3.5-turbo, etc.
+# Also required for domain-specific prompt generation
 # Get key: https://platform.openai.com/api-keys
 OPENAI_API_KEY=your_openai_key_here
 
