test: add edge case tests for simulation pipeline (Person A task A5)
- Test empty prompt suite
- Test extreme config values (context_window=1, top_k=100, etc.)
- Test single config (no comparisons)
- Test invalid/all family filtering
- Add test:edge-cases npm script
- All tests passing

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "npx tsx tests/statistics.test.ts",
     "test:statistics": "npx tsx tests/statistics.test.ts",
+    "test:edge-cases": "npx tsx tests/edge-cases.test.ts",
     "probes": "tsx src/cli/run-probes.ts",
     "analyze": "tsx src/cli/run-analysis.ts",
     "dev": "next dev",
