--- a/package.json
+++ b/package.json
@@ -85,6 +85,14 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "tsx": "^4.21.0"
+    "@tailwindcss/postcss": "^4.1.9",
+    "@types/node": "^18",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "postcss": "^8.5",
+    "tailwindcss": "^4.1.9",
+    "tsx": "^4.21.0",
+    "tw-animate-css": "1.3.3",
+    "typescript": "^5"
   }
 }
