fix(Problem 5): trigger all 6 failure modes in simulation
- probe-runner: add ~5% context_overflow scenario in generateTelemetry
- run-simulation: log per-result rule evaluation (context_usage, latency, cost, tool_timeouts, failure modes)
- tests: add rules-engine.test.ts for all 6 failure modes (context_overflow, silent_truncation_risk, latency_breach, cost_runaway, tool_timeout_risk, retrieval_noise_risk)
- package.json: add test:rules-engine script

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "npx tsx tests/statistics.test.ts",
     "test:statistics": "npx tsx tests/statistics.test.ts",
     "test:edge-cases": "npx tsx tests/edge-cases.test.ts",
+    "test:rules-engine": "npx tsx tests/rules-engine.test.ts",
     "test:mode": "npx tsx tests/run-simulation-mode.test.ts",
     "probes": "tsx src/cli/run-probes.ts",
     "analyze": "tsx src/cli/run-analysis.ts",
